// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TaskErrors /> should render properly with job errors 1`] = `
.emotion-0 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding-bottom: 16px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-3 {
  color: #b3b3b3;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
}

.emotion-6 {
  height: auto;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
  white-space: nowrap;
}

.emotion-6 tr {
  background-color: #252525;
}

.emotion-6 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-6 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
}

.emotion-6 tr:hover .actions {
  color: #b3b3b3;
}

.emotion-6 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-6 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-6 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-6 td {
  max-width: calc(100vw / 6);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-6 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-6 td:last-of-type {
  border-right: 1px solid transparent;
  overflow: visible;
}

.emotion-7 {
  text-align: left;
  white-space: pre-line;
  vertical-align: bottom;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 0;
  border-bottom: 1px solid #2e2e2e;
  width: auto;
}

.emotion-7:nth-of-type(0) {
  width: 100%;
}

.emotion-7:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-8 {
  padding: 12px 16px;
}

.emotion-19 {
  text-align: left;
  white-space: pre-line;
  vertical-align: bottom;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 0;
  border-bottom: 1px solid #2e2e2e;
  width: 1px;
}

.emotion-19:nth-of-type(0) {
  width: 100%;
}

.emotion-19:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 12px 16px;
}

.emotion-21 {
  cursor: pointer;
}

.emotion-22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  alignt-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-right: 8px;
}

.emotion-22 span {
  padding-left: 12px;
  font-weight: 500;
}

.emotion-23:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-24 {
  position: relative;
  height: 100%;
}

.emotion-25 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 6px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #191919;
  background-color: transparent;
  margin: -6px;
}

.emotion-25:hover,
.emotion-25.focus-visible:focus {
  color: #ffffff!important;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <h3
        className="emotion-3"
      >
        Errors
        : 
        6
      </h3>
    </div>
    <div
      className="emotion-4"
    >
      <div
        className="emotion-5"
      >
        <table
          className="emotion-6"
        >
          <thead>
            <tr>
              <th
                className="emotion-7"
              >
                <div
                  className="emotion-8"
                >
                  Error Type
                </div>
              </th>
              <th
                className="emotion-7"
              >
                <div
                  className="emotion-8"
                >
                  Phase
                </div>
              </th>
              <th
                className="emotion-7"
              >
                <div
                  className="emotion-8"
                >
                  Message
                </div>
              </th>
              <th
                className="emotion-7"
              >
                <div
                  className="emotion-8"
                >
                  File Name
                </div>
              </th>
              <th
                className="emotion-7"
              >
                <div
                  className="emotion-8"
                >
                  Processor
                </div>
              </th>
              <th
                className="emotion-7"
              >
                <div
                  className="emotion-8"
                >
                  Time
                </div>
              </th>
              <th
                className="emotion-19"
              >
                <div
                  className="emotion-20"
                >
                  <svg
                    data-file-name="kebab.svg"
                    height={20}
                  />
                </div>
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              className="emotion-21"
              onClick={[Function]}
            >
              <td>
                <div
                  className="emotion-22"
                >
                  <svg
                    color="#d6680b"
                    data-file-name="errorWarning.svg"
                    height={18}
                  />
                  <span>
                    Warning
                  </span>
                </div>
              </td>
              <td>
                execute
              </td>
              <td
                style={
                  Object {
                    "width": "55%",
                  }
                }
              >
                <a
                  className="emotion-23"
                  href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/c097596f-62ef-1f81-83f8-0a580a000954/tasks/b81f47e9-7382-1519-b88a-d2f0132bc0c8/errors/916c86bc-74b9-1519-b065-d2f0132bc0c8"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  title="AttributeError: 'NoneType' object has no attribute 'startswith'"
                >
                  AttributeError: 'NoneType' object has no attribute 'startswith'
                </a>
              </td>
              <td
                style={
                  Object {
                    "width": "50%",
                  }
                }
                title="gs://zorroa-deploy-testdata/zorroa-cypress-testdata/multipage/"
              >
                gs://zorroa-deploy-testdata/zorroa-cypress-testdata/multipage/
              </td>
              <td
                title="HSVSimilarityProcessor"
              >
                HSVSimilarityProcessor
              </td>
              <td>
                2020-01-17 00:25:26
              </td>
              <td>
                <div
                  className="emotion-24"
                >
                  <button
                    aria-label="Toggle Actions Menu"
                    className="actions emotion-25"
                    onBlur={[Function]}
                    onClick={[Function]}
                    type="button"
                  >
                    <svg
                      data-file-name="kebab.svg"
                      height={20}
                    />
                  </button>
                </div>
              </td>
            </tr>
            <tr
              className="emotion-21"
              onClick={[Function]}
            >
              <td>
                <div
                  className="emotion-22"
                >
                  <svg
                    color="#c92300"
                    data-file-name="errorFatal.svg"
                    height={18}
                  />
                  <span>
                    Fatal
                  </span>
                </div>
              </td>
              <td>
                execute
              </td>
              <td
                style={
                  Object {
                    "width": "55%",
                  }
                }
              >
                <a
                  className="emotion-23"
                  href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/c097596f-62ef-1f81-83f8-0a580a000954/tasks/b81f47e9-7382-1519-b88a-d2f0132bc0c8/errors/916c86bb-74b9-1519-b065-d2f0132bc0c8"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  title="NotFound: 404 GET https://storage.googleapis.com/download/storage/v1/b/zorroa-deploy-testdata/o/zorroa-cypress-testdata%2Fmultipage?alt=media: (u'Request failed with status code', 404, u'Expected one of', 200, 206)"
                >
                  NotFound: 404 GET https://storage.googleapis.com/download/storage/v1/b/zorroa-deploy-testdata/o/zorroa-cypress-testdata%2Fmultipage?alt=media: (u'Request failed with status code', 404, u'Expected one of', 200, 206)
                </a>
              </td>
              <td
                style={
                  Object {
                    "width": "50%",
                  }
                }
                title="gs://zorroa-deploy-testdata/zorroa-cypress-testdata/multipage/"
              >
                gs://zorroa-deploy-testdata/zorroa-cypress-testdata/multipage/
              </td>
              <td
                title="DuplicateDetectionProcessor"
              >
                DuplicateDetectionProcessor
              </td>
              <td>
                2020-01-17 00:25:26
              </td>
              <td>
                <div
                  className="emotion-24"
                >
                  <button
                    aria-label="Toggle Actions Menu"
                    className="actions emotion-25"
                    onBlur={[Function]}
                    onClick={[Function]}
                    type="button"
                  >
                    <svg
                      data-file-name="kebab.svg"
                      height={20}
                    />
                  </button>
                </div>
              </td>
            </tr>
            <tr
              className="emotion-21"
              onClick={[Function]}
            >
              <td>
                <div
                  className="emotion-22"
                >
                  <svg
                    color="#d6680b"
                    data-file-name="errorWarning.svg"
                    height={18}
                  />
                  <span>
                    Warning
                  </span>
                </div>
              </td>
              <td>
                execute
              </td>
              <td
                style={
                  Object {
                    "width": "55%",
                  }
                }
              >
                <a
                  className="emotion-23"
                  href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/c097596f-62ef-1f81-83f8-0a580a000954/tasks/b81f47e9-7382-1519-b88a-d2f0132bc0c8/errors/916c86ba-74b9-1519-b065-d2f0132bc0c8"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  title="AttributeError: 'NoneType' object has no attribute 'startswith'"
                >
                  AttributeError: 'NoneType' object has no attribute 'startswith'
                </a>
              </td>
              <td
                style={
                  Object {
                    "width": "50%",
                  }
                }
                title="gs://zorroa-deploy-testdata/zorroa-cypress-testdata/multipage/"
              >
                gs://zorroa-deploy-testdata/zorroa-cypress-testdata/multipage/
              </td>
              <td
                title="ResNetSimilarityProcessor"
              >
                ResNetSimilarityProcessor
              </td>
              <td>
                2020-01-17 00:25:26
              </td>
              <td>
                <div
                  className="emotion-24"
                >
                  <button
                    aria-label="Toggle Actions Menu"
                    className="actions emotion-25"
                    onBlur={[Function]}
                    onClick={[Function]}
                    type="button"
                  >
                    <svg
                      data-file-name="kebab.svg"
                      height={20}
                    />
                  </button>
                </div>
              </td>
            </tr>
            <tr
              className="emotion-21"
              onClick={[Function]}
            >
              <td>
                <div
                  className="emotion-22"
                >
                  <svg
                    color="#c92300"
                    data-file-name="errorFatal.svg"
                    height={18}
                  />
                  <span>
                    Fatal
                  </span>
                </div>
              </td>
              <td>
                execute
              </td>
              <td
                style={
                  Object {
                    "width": "55%",
                  }
                }
              >
                <a
                  className="emotion-23"
                  href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/c097596f-62ef-1f81-83f8-0a580a000954/tasks/b81f47e9-7382-1519-b88a-d2f0132bc0c8/errors/916c86b9-74b9-1519-b065-d2f0132bc0c8"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  title="AttributeError: 'NoneType' object has no attribute 'startswith'"
                >
                  AttributeError: 'NoneType' object has no attribute 'startswith'
                </a>
              </td>
              <td
                style={
                  Object {
                    "width": "50%",
                  }
                }
                title="gs://zorroa-deploy-testdata/zorroa-cypress-testdata/multipage/"
              >
                gs://zorroa-deploy-testdata/zorroa-cypress-testdata/multipage/
              </td>
              <td
                title="ResNetClassifyProcessor"
              >
                ResNetClassifyProcessor
              </td>
              <td>
                2020-01-17 00:25:26
              </td>
              <td>
                <div
                  className="emotion-24"
                >
                  <button
                    aria-label="Toggle Actions Menu"
                    className="actions emotion-25"
                    onBlur={[Function]}
                    onClick={[Function]}
                    type="button"
                  >
                    <svg
                      data-file-name="kebab.svg"
                      height={20}
                    />
                  </button>
                </div>
              </td>
            </tr>
            <tr
              className="emotion-21"
              onClick={[Function]}
            >
              <td>
                <div
                  className="emotion-22"
                >
                  <svg
                    color="#d6680b"
                    data-file-name="errorWarning.svg"
                    height={18}
                  />
                  <span>
                    Warning
                  </span>
                </div>
              </td>
              <td>
                execute
              </td>
              <td
                style={
                  Object {
                    "width": "55%",
                  }
                }
              >
                <a
                  className="emotion-23"
                  href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/c097596f-62ef-1f81-83f8-0a580a000954/tasks/b81f47e9-7382-1519-b88a-d2f0132bc0c8/errors/916c86b8-74b9-1519-b065-d2f0132bc0c8"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  title="AttributeError: 'NoneType' object has no attribute 'startswith'"
                >
                  AttributeError: 'NoneType' object has no attribute 'startswith'
                </a>
              </td>
              <td
                style={
                  Object {
                    "width": "50%",
                  }
                }
                title="gs://zorroa-deploy-testdata/zorroa-cypress-testdata/multipage/"
              >
                gs://zorroa-deploy-testdata/zorroa-cypress-testdata/multipage/
              </td>
              <td
                title="FaceRecognitionProcessor"
              >
                FaceRecognitionProcessor
              </td>
              <td>
                2020-01-17 00:25:26
              </td>
              <td>
                <div
                  className="emotion-24"
                >
                  <button
                    aria-label="Toggle Actions Menu"
                    className="actions emotion-25"
                    onBlur={[Function]}
                    onClick={[Function]}
                    type="button"
                  >
                    <svg
                      data-file-name="kebab.svg"
                      height={20}
                    />
                  </button>
                </div>
              </td>
            </tr>
            <tr
              className="emotion-21"
              onClick={[Function]}
            >
              <td>
                <div
                  className="emotion-22"
                >
                  <svg
                    color="#d6680b"
                    data-file-name="errorWarning.svg"
                    height={18}
                  />
                  <span>
                    Warning
                  </span>
                </div>
              </td>
              <td>
                execute
              </td>
              <td
                style={
                  Object {
                    "width": "55%",
                  }
                }
              >
                <a
                  className="emotion-23"
                  href="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/c097596f-62ef-1f81-83f8-0a580a000954/tasks/b81f47e9-7382-1519-b88a-d2f0132bc0c8/errors/916c86b7-74b9-1519-b065-d2f0132bc0c8"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  title="NotFound: 404 GET https://storage.googleapis.com/download/storage/v1/b/zorroa-deploy-testdata/o/zorroa-cypress-testdata%2Fmultipage?alt=media: (u'Request failed with status code', 404, u'Expected one of', 200, 206)"
                >
                  NotFound: 404 GET https://storage.googleapis.com/download/storage/v1/b/zorroa-deploy-testdata/o/zorroa-cypress-testdata%2Fmultipage?alt=media: (u'Request failed with status code', 404, u'Expected one of', 200, 206)
                </a>
              </td>
              <td
                style={
                  Object {
                    "width": "50%",
                  }
                }
                title="gs://zorroa-deploy-testdata/zorroa-cypress-testdata/multipage/"
              >
                gs://zorroa-deploy-testdata/zorroa-cypress-testdata/multipage/
              </td>
              <td
                title="ImageImporter"
              >
                ImageImporter
              </td>
              <td>
                2020-01-17 00:25:26
              </td>
              <td>
                <div
                  className="emotion-24"
                >
                  <button
                    aria-label="Toggle Actions Menu"
                    className="actions emotion-25"
                    onBlur={[Function]}
                    onClick={[Function]}
                    type="button"
                  >
                    <svg
                      data-file-name="kebab.svg"
                      height={20}
                    />
                  </button>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div>
         
      </div>
      <div>
         
      </div>
    </div>
  </div>
</div>
`;

exports[`<TaskErrors /> should render properly without job errors 1`] = `
.emotion-0 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding-bottom: 16px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-3 {
  color: #b3b3b3;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
}

.emotion-5 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.emotion-6 {
  height: 100%;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
  white-space: nowrap;
}

.emotion-6 tr {
  background-color: #252525;
}

.emotion-6 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-6 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
}

.emotion-6 tr:hover .actions {
  color: #b3b3b3;
}

.emotion-6 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-6 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-6 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-6 td {
  max-width: calc(100vw / 6);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-6 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-6 td:last-of-type {
  border-right: 1px solid transparent;
  overflow: visible;
}

.emotion-7 {
  text-align: left;
  white-space: pre-line;
  vertical-align: bottom;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 0;
  border-bottom: 1px solid #2e2e2e;
  width: auto;
}

.emotion-7:nth-of-type(0) {
  width: 100%;
}

.emotion-7:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-8 {
  padding: 12px 16px;
}

.emotion-19 {
  text-align: left;
  white-space: pre-line;
  vertical-align: bottom;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 0;
  border-bottom: 1px solid #2e2e2e;
  width: 1px;
}

.emotion-19:nth-of-type(0) {
  width: 100%;
}

.emotion-19:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 12px 16px;
}

.emotion-21 {
  height: 100%;
  pointer-events: none;
}

.emotion-22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  text-align: center;
  color: #808080;
  font-size: 15px;
  line-height: 19px;
}

.emotion-23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 18px;
  line-height: 21px;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <h3
        className="emotion-3"
      >
        Errors
        : 
        0
      </h3>
    </div>
    <div
      className="emotion-4"
    >
      <div
        className="emotion-5"
      >
        <table
          className="emotion-6"
        >
          <thead>
            <tr>
              <th
                className="emotion-7"
              >
                <div
                  className="emotion-8"
                >
                  Error Type
                </div>
              </th>
              <th
                className="emotion-7"
              >
                <div
                  className="emotion-8"
                >
                  Phase
                </div>
              </th>
              <th
                className="emotion-7"
              >
                <div
                  className="emotion-8"
                >
                  Message
                </div>
              </th>
              <th
                className="emotion-7"
              >
                <div
                  className="emotion-8"
                >
                  File Name
                </div>
              </th>
              <th
                className="emotion-7"
              >
                <div
                  className="emotion-8"
                >
                  Processor
                </div>
              </th>
              <th
                className="emotion-7"
              >
                <div
                  className="emotion-8"
                >
                  Time
                </div>
              </th>
              <th
                className="emotion-19"
              >
                <div
                  className="emotion-20"
                >
                  <svg
                    data-file-name="kebab.svg"
                    height={20}
                  />
                </div>
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              className="emotion-21"
            >
              <td
                colSpan={7}
              >
                <div
                  className="emotion-22"
                >
                  <div
                    className="emotion-23"
                  >
                    <svg
                      data-file-name="noJobs.svg"
                      width={200}
                    />
                    <div>
                      This job has no errors.
                    </div>
                    <div>
                      Any new error will appear here.
                    </div>
                  </div>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;
